--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,8 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #121c33;
+  background-color: #f5f5f5;
 }
 
 .App-link {
