--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,24 @@
-.App {
-  text-align: center;
+.app {
+  text-align: left;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
+/* TODO: redo overall layout */
+.app-main {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */
   font-size: calc(10px + 2vmin);
   color: #121c33;
   background-color: #f5f5f5;
 }
 
-.App-link {
-  color: #61dafb;
+.home-page {
+  width: 1000px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.home-page > h1 {
+  padding-left: 8%;
 }
